--- a/log-api/src/main/resources/application.properties
+++ b/log-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/log?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=dNvidia11
 
 spring.jpa.show-sql=true 
