--- a/log-api/pom.xml
+++ b/log-api/pom.xml
@@ -49,11 +49,6 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- termo xml 
-		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-xml</artifactId>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -72,6 +67,14 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 		
+		
+		<dependency>
+			   <groupId>org.flywaydb</groupId>
+			   <artifactId>flyway-core</artifactId>
+			   <version>9.8.1</version> 
+		</dependency>
+			
+			
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
@@ -79,6 +82,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<dependency>
+  			<groupId>org.modelmapper</groupId>
+  			<artifactId>modelmapper</artifactId>
+  			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
 
